--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,9 +25,9 @@
                             <a class="headlineLink" href="{{link}}">{{headline}}</a>
                         </div>
                         <div class="col-md-4 text-center">
-                            {{#unless comments}}
+                            {{#unless Notes}}
                             <button type="button" class="btn btn-default mx-1 mb-1 commentBtn" data-toggle="modal" data-target="#showComment" value="{{{_id}}}">Comment</button>
-                            {{/unless}} {{#if comments}}
+                            {{/unless}} {{#if Notes}}
                             <button type="button" class="btn btn-default mx-1 mb-1 commentBtn" data-toggle="modal" data-target="#showComment" value="{{{_id}}}">Edit Comment</button>
                             {{/if}} {{#unless saved}}
                             <button class="btn btn-default mx-1 mb-1 save" data-saved="{{{saved}}}" value="{{{_id}}}">Save Article</button>
